--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+.my-class-name {
+  display: flex;
+  justify-content: space-between;
+}
